--- a/app/src/main/res/layout/activity_worker_confirm.xml
+++ b/app/src/main/res/layout/activity_worker_confirm.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".worker_confirm">
+    tools:context=".worker_confirm"
+    android:background="@drawable/prof">
 
     <TextView
         android:layout_width="match_parent"
