--- a/app/src/main/res/layout/activity_add_service.xml
+++ b/app/src/main/res/layout/activity_add_service.xml
@@ -10,9 +10,9 @@
     <ImageView
         android:id="@+id/imgadd_service"
         android:layout_width="match_parent"
-        android:layout_height="125dp"
+        android:layout_height="200dp"
         android:layout_marginTop="30dp"
-        android:src="@drawable/salary" />
+        android:src="@drawable/logo" />
 
     <EditText
         android:id="@+id/et_new_service"
