--- a/app/src/main/res/layout/activity_customer_pending_appointment.xml
+++ b/app/src/main/res/layout/activity_customer_pending_appointment.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkpurple">
+    android:background="@drawable/cbg">
 
     <ImageView
         android:layout_width="match_parent"
