--- a/app/src/main/res/layout/activity_worker_display.xml
+++ b/app/src/main/res/layout/activity_worker_display.xml
@@ -12,7 +12,7 @@
         android:layout_height="200dp"
         android:layout_marginTop="25dp"
         android:id="@+id/imgviewallworker"
-        android:src="@drawable/viewallworker"/>
+        android:src="@drawable/logo"/>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
