--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="lightpink">#ffcdd2</color>
     <color name="lightpurple">#ede7f6</color>
     <color name="darkpurple">#d1c4e9</color>
+    <color name="navyblue">#000080</color>
+
 </resources>
