--- a/app/src/main/res/layout/activity_worker_confirm.xml
+++ b/app/src/main/res/layout/activity_worker_confirm.xml
@@ -9,7 +9,9 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="75dp"
+        android:textSize="30dp"
+        android:textColor="@color/lightyellow"
         android:id="@+id/wc_tv"
         android:layout_marginTop="25dp"
         android:text="Your confirmed appointments are : "
@@ -19,6 +21,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/cbg"
         android:id="@+id/wc_lv"
         android:layout_below="@+id/wc_tv"
         android:layout_marginTop="25dp"
