--- a/app/src/main/res/layout/admin_list_layout.xml
+++ b/app/src/main/res/layout/admin_list_layout.xml
@@ -2,17 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/adminbg">
+    android:background="@color/magenta">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tv_admin_name"
+        android:textColor="@color/hue"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/lightyellow"
         android:id="@+id/tv_admin_number"/>
 
 </LinearLayout>
