--- a/app/src/main/res/layout/worker_list_layout.xml
+++ b/app/src/main/res/layout/worker_list_layout.xml
@@ -3,22 +3,25 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/adminbg">
+    android:background="@color/magenta">
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/hue"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 
     <TextView
         android:id="@+id/tv_work"
         android:layout_width="match_parent"
+        android:textColor="@color/white"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/tv_aadhar"
         android:layout_width="match_parent"
+        android:textColor="@color/lightyellow"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
