--- a/app/src/main/res/layout/activity_customer_confirm_appointment.xml
+++ b/app/src/main/res/layout/activity_customer_confirm_appointment.xml
@@ -29,6 +29,6 @@
         android:id="@+id/cca_lv"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="25dp"
-        android:background="@color/airforceblue"/>
+        android:background="@drawable/cbg"/>
 
 </RelativeLayout>
