--- a/app/src/main/res/layout/activity_customer_display.xml
+++ b/app/src/main/res/layout/activity_customer_display.xml
@@ -11,7 +11,7 @@
         android:layout_height="200dp"
         android:layout_marginTop="25dp"
         android:id="@+id/imgviewallcustomer"
-        android:src="@drawable/logo"/>
+        android:src="@drawable/clist"/>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
