--- a/app/src/main/res/layout/activity_salary.xml
+++ b/app/src/main/res/layout/activity_salary.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:id="@+id/imgterm"
-        android:src="@drawable/worker_accept"
+        android:src="@drawable/lsalary"
         android:layout_marginTop="25dp"/>
 
     <TextView
