--- a/app/src/main/res/layout/activity_worker_confirm.xml
+++ b/app/src/main/res/layout/activity_worker_confirm.xml
@@ -4,26 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".worker_confirm"
-    android:background="@drawable/prof">
+    tools:context=".worker_confirm">
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:textSize="30dp"
-        android:textColor="@color/lightyellow"
+        android:layout_height="wrap_content"
         android:id="@+id/wc_tv"
         android:layout_marginTop="25dp"
         android:text="Your confirmed appointments are : "
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:layout_alignParentTop="true"/>
 
+    <Spinner
+        android:id="@+id/wc_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:entries="@array/confirmed"
+        android:layout_below="@+id/wc_tv"
+        android:layout_marginTop="25dp"/>
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/cbg"
         android:id="@+id/wc_lv"
-        android:layout_below="@+id/wc_tv"
+        android:layout_below="@+id/wc_spinner"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="25dp"/>
 
